--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
+    "@vue/test-utils": "^2.4.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.25",
     "prettier": "^3.0.0",
