--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vue": "^3.3.4"
   },
   "devDependencies": {
+    "@testing-library/vue": "^7.0.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/test-utils": "^2.4.0",
     "autoprefixer": "^10.4.14",
@@ -22,6 +23,7 @@
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
     "vite": "^4.4.0",
+    "vitest": "^0.33.0",
     "vue-tsc": "^1.8.3"
   }
 }
