--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/test-utils": "^2.4.0",
     "autoprefixer": "^10.4.14",
+    "jsdom": "^22.1.0",
     "postcss": "^8.4.25",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.3.0",
