--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "clsx": "^1.2.1",
+    "normalize.css": "^8.0.1",
     "pinia": "^2.1.4",
     "vue": "^3.3.4"
   },
@@ -19,12 +20,7 @@
     "@testing-library/vue": "^7.0.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/test-utils": "^2.4.0",
-    "autoprefixer": "^10.4.14",
     "jsdom": "^22.1.0",
-    "postcss": "^8.4.25",
-    "prettier": "^3.0.0",
-    "prettier-plugin-tailwindcss": "^0.3.0",
-    "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
     "vite": "^4.4.0",
     "vitest": "^0.33.0",
